Attempt to improve setup